frontend/src/ISQ/Lang/ISQv2Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ISQv2Parser.y
-----------------------------------------------------------------------------


rule 42 is unused
rule 43 is unused

terminal const is unused
terminal '&&' is unused
terminal '||' is unused
terminal '.' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_isqv2 -> TopLevel                           (0)
	TopLevel ->                                        (1)
	TopLevel -> TopLevel TopLevelMember                (2)
	StatementListMaybe -> StatementListMaybe Statement   (3)
	StatementListMaybe ->                              (4)
	StatementList -> StatementListMaybe                (5)
	Expr -> Expr1                                      (6)
	Expr -> Expr2                                      (7)
	ExprCallable -> '(' Expr ')'                       (8)
	ExprCallable -> IDENTIFIER                         (9)
	Expr1Left -> ExprCallable                          (10)
	Expr1Left -> Expr1Left '[' Expr ']'                (11)
	Expr1 -> Expr1Left                                 (12)
	Expr1 -> Expr1 '+' Expr1                           (13)
	Expr1 -> Expr1 '-' Expr1                           (14)
	Expr1 -> Expr1 '*' Expr1                           (15)
	Expr1 -> Expr1 '/' Expr1                           (16)
	Expr1 -> Expr1 '==' Expr1                          (17)
	Expr1 -> Expr1 '!=' Expr1                          (18)
	Expr1 -> Expr1 '>' Expr1                           (19)
	Expr1 -> Expr1 '<' Expr1                           (20)
	Expr1 -> Expr1 '>=' Expr1                          (21)
	Expr1 -> Expr1 '<=' Expr1                          (22)
	Expr1 -> '-' Expr1                                 (23)
	Expr1 -> '+' Expr1                                 (24)
	Expr1 -> NATURAL                                   (25)
	Expr1 -> FLOAT                                     (26)
	Expr1 -> IMAGPART                                  (27)
	Expr1 -> CallExpr                                  (28)
	Expr1 -> '[' Expr1List ']'                         (29)
	Expr1 -> true                                      (30)
	Expr1 -> false                                     (31)
	Expr1 -> ISQCore_MeasureExpr                       (32)
	CallExpr -> ExprCallable '(' Expr1List ')'         (33)
	MaybeExpr1 -> Expr1                                (34)
	MaybeExpr1 ->                                      (35)
	RangeExpr -> MaybeExpr1 ':' MaybeExpr1 ':' MaybeExpr1   (36)
	RangeExpr -> MaybeExpr1 ':' MaybeExpr1             (37)
	Expr2 -> RangeExpr                                 (38)
	Expr1List -> Expr1                                 (39)
	Expr1List -> Expr1List ',' Expr1                   (40)
	Expr1List ->                                       (41)
	Expr1ListNonEmpty -> Expr1                         (42)
	Expr1ListNonEmpty -> Expr1ListNonEmpty ',' Expr1   (43)
	Expr1LeftListNonEmpty -> Expr1Left                 (44)
	Expr1LeftListNonEmpty -> Expr1LeftListNonEmpty ',' Expr1Left   (45)
	IdentListNonEmpty -> IDENTIFIER                    (46)
	IdentListNonEmpty -> IdentListNonEmpty ',' IDENTIFIER   (47)
	ForStatement -> for IDENTIFIER in RangeExpr '{' StatementList '}'   (48)
	WhileStatement -> while Expr '{' StatementList '}'   (49)
	IfStatement -> if Expr '{' StatementList '}'       (50)
	IfStatement -> if Expr '{' StatementList '}' else '{' StatementList '}'   (51)
	PassStatement -> pass                              (52)
	DefvarStatement -> LetStyleDef                     (53)
	DefvarStatement -> ISQCore_CStyleVarDef            (54)
	LetStyleDef -> let IdentListNonEmpty ':' Type      (55)
	CallStatement -> CallExpr                          (56)
	AssignStatement -> Expr1Left '=' Expr              (57)
	ReturnStatement -> return Expr                     (58)
	ISQCore_GatedefMatrix -> '[' ISQCore_GatedefMatrixContent ']'   (59)
	ISQCore_GatedefMatrixContent -> ISQCore_GatedefMatrixRow   (60)
	ISQCore_GatedefMatrixContent -> ISQCore_GatedefMatrixContent ';' ISQCore_GatedefMatrixRow   (61)
	ISQCore_GatedefMatrixRow -> Expr1                  (62)
	ISQCore_GatedefMatrixRow -> ISQCore_GatedefMatrixRow ',' Expr1   (63)
	ISQCore_GatedefStatement -> defgate IDENTIFIER '=' ISQCore_GatedefMatrix   (64)
	GateModifier -> inv                                (65)
	GateModifier -> ctrl '<' NATURAL '>'               (66)
	GateModifier -> nctrl '<' NATURAL '>'              (67)
	GateModifier -> ctrl                               (68)
	GateModifier -> nctrl                              (69)
	GateModifierListNonEmpty -> GateModifierListNonEmpty GateModifier   (70)
	GateModifierListNonEmpty -> GateModifier           (71)
	ISQCore_UnitaryStatement -> ExprCallable '<' Expr1LeftListNonEmpty '>'   (72)
	ISQCore_UnitaryStatement -> GateModifierListNonEmpty ExprCallable '<' Expr1LeftListNonEmpty '>'   (73)
	ISQCore_MeasureExpr -> M '<' Expr1Left '>'         (74)
	ISQCore_MeasureExpr -> M '(' Expr1Left ')'         (75)
	ISQCore_MeasureStatement -> ISQCore_MeasureExpr    (76)
	ISQCore_ResetStatement -> Expr1Left '=' '|0>'      (77)
	ISQCore_PrintStatement -> print Expr               (78)
	StatementNonEmpty -> PassStatement ';'             (79)
	StatementNonEmpty -> IfStatement                   (80)
	StatementNonEmpty -> ForStatement                  (81)
	StatementNonEmpty -> WhileStatement                (82)
	StatementNonEmpty -> DefvarStatement ';'           (83)
	StatementNonEmpty -> CallStatement ';'             (84)
	StatementNonEmpty -> AssignStatement ';'           (85)
	StatementNonEmpty -> ReturnStatement ';'           (86)
	StatementNonEmpty -> ISQCore_UnitaryStatement ';'   (87)
	StatementNonEmpty -> ISQCore_MeasureStatement ';'   (88)
	StatementNonEmpty -> ISQCore_ResetStatement ';'    (89)
	StatementNonEmpty -> ISQCore_PrintStatement ';'    (90)
	Statement -> StatementNonEmpty                     (91)
	Statement -> ';'                                   (92)
	ArrayTypeDecorator -> '[' ']'                      (93)
	ArrayTypeDecorator -> '[' NATURAL ']'              (94)
	Type -> SimpleType                                 (95)
	Type -> CompositeType                              (96)
	SimpleType -> int                                  (97)
	SimpleType -> qbit                                 (98)
	SimpleType -> bool                                 (99)
	SimpleType -> unit                                 (100)
	CompositeType -> Type ArrayTypeDecorator           (101)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER             (102)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER ArrayTypeDecorator   (103)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER '=' Expr    (104)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER ArrayTypeDecorator '=' Expr   (105)
	ISQCore_CStyleVarDefList -> ISQCore_CStyleVarDefTerm   (106)
	ISQCore_CStyleVarDefList -> ISQCore_CStyleVarDefList ',' ISQCore_CStyleVarDefTerm   (107)
	ISQCore_CStyleVarDef -> SimpleType ISQCore_CStyleVarDefList   (108)
	ProcedureArgListNonEmpty -> ProcedureArg           (109)
	ProcedureArgListNonEmpty -> ProcedureArgListNonEmpty ',' ProcedureArg   (110)
	ProcedureArgList -> ProcedureArgListNonEmpty       (111)
	ProcedureArgList ->                                (112)
	ProcedureArg -> SimpleType IDENTIFIER              (113)
	ProcedureArg -> ISQCore_CStyleArrayArg             (114)
	ProcedureArg -> IDENTIFIER ':' Type                (115)
	ISQCore_CStyleArrayArg -> SimpleType IDENTIFIER ArrayTypeDecorator   (116)
	Procedure -> procedure IDENTIFIER '(' ProcedureArgList ')' '{' StatementList '}'   (117)
	Procedure -> procedure IDENTIFIER '(' ProcedureArgList ')' '->' Type '{' StatementList '}'   (118)
	Procedure -> SimpleType IDENTIFIER '(' ProcedureArgList ')' '{' StatementList '}'   (119)
	TopLevelVar -> DefvarStatement ';'                 (120)
	TopLevelMember -> Procedure                        (121)
	TopLevelMember -> ISQCore_GatedefStatement ';'     (122)
	TopLevelMember -> TopLevelVar                      (123)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	if             { TokenReservedId $$ "if" }
	else           { TokenReservedId $$ "else" }
	for            { TokenReservedId $$ "for" }
	in             { TokenReservedId $$ "in" }
	while          { TokenReservedId $$ "while" }
	procedure      { TokenReservedId $$ "procedure" }
	int            { TokenReservedId $$ "int" }
	qbit           { TokenReservedId $$ "qbit" }
	M              { TokenReservedId $$ "M" }
	print          { TokenReservedId $$ "print" }
	defgate        { TokenReservedId $$ "defgate" }
	pass           { TokenReservedId $$ "pass" }
	return         { TokenReservedId $$ "return" }
	ctrl           { TokenReservedId $$ "ctrl" }
	nctrl          { TokenReservedId $$ "nctrl" }
	inv            { TokenReservedId $$ "inv" }
	bool           { TokenReservedId $$ "bool" }
	true           { TokenReservedId $$ "true" }
	false          { TokenReservedId $$ "false" }
	let            { TokenReservedId $$ "let" }
	const          { TokenReservedId $$ "const" }
	unit           { TokenReservedId $$ "unit" }
	'|0>'          { TokenReservedOp $$ "|0>" }
	'='            { TokenReservedOp $$ "=" }
	'=='           { TokenReservedOp $$ "==" }
	'+'            { TokenReservedOp $$ "+" }
	'-'            { TokenReservedOp $$ "-" }
	'*'            { TokenReservedOp $$ "*" }
	'/'            { TokenReservedOp $$ "/" }
	'<'            { TokenReservedOp $$ "<" }
	'>'            { TokenReservedOp $$ ">" }
	'<='           { TokenReservedOp $$ "<=" }
	'>='           { TokenReservedOp $$ ">=" }
	'!='           { TokenReservedOp $$ "!=" }
	'&&'           { TokenReservedOp $$ "&&" }
	'||'           { TokenReservedOp $$ "||" }
	','            { TokenReservedOp $$ "," }
	';'            { TokenReservedOp $$ ";" }
	'('            { TokenReservedOp $$ "(" }
	')'            { TokenReservedOp $$ ")" }
	'['            { TokenReservedOp $$ "[" }
	']'            { TokenReservedOp $$ "]" }
	'{'            { TokenReservedOp $$ "{" }
	'}'            { TokenReservedOp $$ "}" }
	':'            { TokenReservedOp $$ ":" }
	'->'           { TokenReservedOp $$ "->" }
	'.'            { TokenReservedOp $$ "." }
	NATURAL        { TokenNatural _ _ }
	FLOAT          { TokenFloat _ _ }
	IMAGPART       { TokenImagPart _ _ }
	IDENTIFIER     { TokenIdent _ _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_isqv2    rule  0
	TopLevel        rules 1, 2
	StatementListMaybe rules 3, 4
	StatementList   rule  5
	Expr            rules 6, 7
	ExprCallable    rules 8, 9
	Expr1Left       rules 10, 11
	Expr1           rules 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	CallExpr        rule  33
	MaybeExpr1      rules 34, 35
	RangeExpr       rules 36, 37
	Expr2           rule  38
	Expr1List       rules 39, 40, 41
	Expr1ListNonEmpty rules 42, 43
	Expr1LeftListNonEmpty rules 44, 45
	IdentListNonEmpty rules 46, 47
	ForStatement    rule  48
	WhileStatement  rule  49
	IfStatement     rules 50, 51
	PassStatement   rule  52
	DefvarStatement rules 53, 54
	LetStyleDef     rule  55
	CallStatement   rule  56
	AssignStatement rule  57
	ReturnStatement rule  58
	ISQCore_GatedefMatrix rule  59
	ISQCore_GatedefMatrixContent rules 60, 61
	ISQCore_GatedefMatrixRow rules 62, 63
	ISQCore_GatedefStatement rule  64
	GateModifier    rules 65, 66, 67, 68, 69
	GateModifierListNonEmpty rules 70, 71
	ISQCore_UnitaryStatement rules 72, 73
	ISQCore_MeasureExpr rules 74, 75
	ISQCore_MeasureStatement rule  76
	ISQCore_ResetStatement rule  77
	ISQCore_PrintStatement rule  78
	StatementNonEmpty rules 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90
	Statement       rules 91, 92
	ArrayTypeDecorator rules 93, 94
	Type            rules 95, 96
	SimpleType      rules 97, 98, 99, 100
	CompositeType   rule  101
	ISQCore_CStyleVarDefTerm rules 102, 103, 104, 105
	ISQCore_CStyleVarDefList rules 106, 107
	ISQCore_CStyleVarDef rule  108
	ProcedureArgListNonEmpty rules 109, 110
	ProcedureArgList rules 111, 112
	ProcedureArg    rules 113, 114, 115
	ISQCore_CStyleArrayArg rule  116
	Procedure       rules 117, 118, 119
	TopLevelVar     rule  120
	TopLevelMember  rules 121, 122, 123

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_isqv2 -> . TopLevel                          (rule 0)

	procedure      reduce using rule 1
	int            reduce using rule 1
	qbit           reduce using rule 1
	defgate        reduce using rule 1
	bool           reduce using rule 1
	let            reduce using rule 1
	unit           reduce using rule 1
	%eof           reduce using rule 1

	TopLevel       goto state 2

State 1

	TopLevel -> .                                       (rule 1)



State 2

	%start_isqv2 -> TopLevel .                          (rule 0)
	TopLevel -> TopLevel . TopLevelMember               (rule 2)

	procedure      shift, and enter state 11
	int            shift, and enter state 12
	qbit           shift, and enter state 13
	defgate        shift, and enter state 14
	bool           shift, and enter state 15
	let            shift, and enter state 16
	unit           shift, and enter state 17
	%eof           accept

	DefvarStatementgoto state 3
	LetStyleDef    goto state 4
	ISQCore_GatedefStatementgoto state 5
	SimpleType     goto state 6
	ISQCore_CStyleVarDefgoto state 7
	Procedure      goto state 8
	TopLevelVar    goto state 9
	TopLevelMember goto state 10

State 3

	TopLevelVar -> DefvarStatement . ';'                (rule 120)

	';'            shift, and enter state 26


State 4

	DefvarStatement -> LetStyleDef .                    (rule 53)

	';'            reduce using rule 53


State 5

	TopLevelMember -> ISQCore_GatedefStatement . ';'    (rule 122)

	';'            shift, and enter state 25


State 6

	ISQCore_CStyleVarDef -> SimpleType . ISQCore_CStyleVarDefList    (rule 108)
	Procedure -> SimpleType . IDENTIFIER '(' ProcedureArgList ')' '{' StatementList '}'    (rule 119)

	IDENTIFIER     shift, and enter state 24

	ISQCore_CStyleVarDefTermgoto state 22
	ISQCore_CStyleVarDefListgoto state 23

State 7

	DefvarStatement -> ISQCore_CStyleVarDef .           (rule 54)

	';'            reduce using rule 54


State 8

	TopLevelMember -> Procedure .                       (rule 121)

	procedure      reduce using rule 121
	int            reduce using rule 121
	qbit           reduce using rule 121
	defgate        reduce using rule 121
	bool           reduce using rule 121
	let            reduce using rule 121
	unit           reduce using rule 121
	%eof           reduce using rule 121


State 9

	TopLevelMember -> TopLevelVar .                     (rule 123)

	procedure      reduce using rule 123
	int            reduce using rule 123
	qbit           reduce using rule 123
	defgate        reduce using rule 123
	bool           reduce using rule 123
	let            reduce using rule 123
	unit           reduce using rule 123
	%eof           reduce using rule 123


State 10

	TopLevel -> TopLevel TopLevelMember .               (rule 2)

	procedure      reduce using rule 2
	int            reduce using rule 2
	qbit           reduce using rule 2
	defgate        reduce using rule 2
	bool           reduce using rule 2
	let            reduce using rule 2
	unit           reduce using rule 2
	%eof           reduce using rule 2


State 11

	Procedure -> procedure . IDENTIFIER '(' ProcedureArgList ')' '{' StatementList '}'    (rule 117)
	Procedure -> procedure . IDENTIFIER '(' ProcedureArgList ')' '->' Type '{' StatementList '}'    (rule 118)

	IDENTIFIER     shift, and enter state 21


State 12

	SimpleType -> int .                                 (rule 97)

	','            reduce using rule 97
	';'            reduce using rule 97
	')'            reduce using rule 97
	'['            reduce using rule 97
	'{'            reduce using rule 97
	IDENTIFIER     reduce using rule 97


State 13

	SimpleType -> qbit .                                (rule 98)

	','            reduce using rule 98
	';'            reduce using rule 98
	')'            reduce using rule 98
	'['            reduce using rule 98
	'{'            reduce using rule 98
	IDENTIFIER     reduce using rule 98


State 14

	ISQCore_GatedefStatement -> defgate . IDENTIFIER '=' ISQCore_GatedefMatrix    (rule 64)

	IDENTIFIER     shift, and enter state 20


State 15

	SimpleType -> bool .                                (rule 99)

	','            reduce using rule 99
	';'            reduce using rule 99
	')'            reduce using rule 99
	'['            reduce using rule 99
	'{'            reduce using rule 99
	IDENTIFIER     reduce using rule 99


State 16

	LetStyleDef -> let . IdentListNonEmpty ':' Type     (rule 55)

	IDENTIFIER     shift, and enter state 19

	IdentListNonEmptygoto state 18

State 17

	SimpleType -> unit .                                (rule 100)

	','            reduce using rule 100
	';'            reduce using rule 100
	')'            reduce using rule 100
	'['            reduce using rule 100
	'{'            reduce using rule 100
	IDENTIFIER     reduce using rule 100


State 18

	IdentListNonEmpty -> IdentListNonEmpty . ',' IDENTIFIER    (rule 47)
	LetStyleDef -> let IdentListNonEmpty . ':' Type     (rule 55)

	','            shift, and enter state 34
	':'            shift, and enter state 35


State 19

	IdentListNonEmpty -> IDENTIFIER .                   (rule 46)

	','            reduce using rule 46
	':'            reduce using rule 46


State 20

	ISQCore_GatedefStatement -> defgate IDENTIFIER . '=' ISQCore_GatedefMatrix    (rule 64)

	'='            shift, and enter state 33


State 21

	Procedure -> procedure IDENTIFIER . '(' ProcedureArgList ')' '{' StatementList '}'    (rule 117)
	Procedure -> procedure IDENTIFIER . '(' ProcedureArgList ')' '->' Type '{' StatementList '}'    (rule 118)

	'('            shift, and enter state 32


State 22

	ISQCore_CStyleVarDefList -> ISQCore_CStyleVarDefTerm .    (rule 106)

	','            reduce using rule 106
	';'            reduce using rule 106


State 23

	ISQCore_CStyleVarDefList -> ISQCore_CStyleVarDefList . ',' ISQCore_CStyleVarDefTerm    (rule 107)
	ISQCore_CStyleVarDef -> SimpleType ISQCore_CStyleVarDefList .    (rule 108)

	','            shift, and enter state 31
	';'            reduce using rule 108


State 24

	ISQCore_CStyleVarDefTerm -> IDENTIFIER .            (rule 102)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER . ArrayTypeDecorator    (rule 103)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER . '=' Expr    (rule 104)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER . ArrayTypeDecorator '=' Expr    (rule 105)
	Procedure -> SimpleType IDENTIFIER . '(' ProcedureArgList ')' '{' StatementList '}'    (rule 119)

	'='            shift, and enter state 28
	','            reduce using rule 102
	';'            reduce using rule 102
	'('            shift, and enter state 29
	'['            shift, and enter state 30

	ArrayTypeDecoratorgoto state 27

State 25

	TopLevelMember -> ISQCore_GatedefStatement ';' .    (rule 122)

	procedure      reduce using rule 122
	int            reduce using rule 122
	qbit           reduce using rule 122
	defgate        reduce using rule 122
	bool           reduce using rule 122
	let            reduce using rule 122
	unit           reduce using rule 122
	%eof           reduce using rule 122


State 26

	TopLevelVar -> DefvarStatement ';' .                (rule 120)

	procedure      reduce using rule 120
	int            reduce using rule 120
	qbit           reduce using rule 120
	defgate        reduce using rule 120
	bool           reduce using rule 120
	let            reduce using rule 120
	unit           reduce using rule 120
	%eof           reduce using rule 120


State 27

	ISQCore_CStyleVarDefTerm -> IDENTIFIER ArrayTypeDecorator .    (rule 103)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER ArrayTypeDecorator . '=' Expr    (rule 105)

	'='            shift, and enter state 73
	','            reduce using rule 103
	';'            reduce using rule 103


State 28

	ISQCore_CStyleVarDefTerm -> IDENTIFIER '=' . Expr    (rule 104)

	M              shift, and enter state 62
	true           shift, and enter state 63
	false          shift, and enter state 64
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'('            shift, and enter state 67
	'['            shift, and enter state 68
	':'            reduce using rule 35
	NATURAL        shift, and enter state 69
	FLOAT          shift, and enter state 70
	IMAGPART       shift, and enter state 71
	IDENTIFIER     shift, and enter state 72

	Expr           goto state 53
	ExprCallable   goto state 54
	Expr1Left      goto state 55
	Expr1          goto state 56
	CallExpr       goto state 57
	MaybeExpr1     goto state 58
	RangeExpr      goto state 59
	Expr2          goto state 60
	ISQCore_MeasureExprgoto state 61

State 29

	Procedure -> SimpleType IDENTIFIER '(' . ProcedureArgList ')' '{' StatementList '}'    (rule 119)

	int            shift, and enter state 12
	qbit           shift, and enter state 13
	bool           shift, and enter state 15
	unit           shift, and enter state 17
	')'            reduce using rule 112
	IDENTIFIER     shift, and enter state 47

	SimpleType     goto state 42
	ProcedureArgListNonEmptygoto state 43
	ProcedureArgListgoto state 52
	ProcedureArg   goto state 45
	ISQCore_CStyleArrayArggoto state 46

State 30

	ArrayTypeDecorator -> '[' . ']'                     (rule 93)
	ArrayTypeDecorator -> '[' . NATURAL ']'             (rule 94)

	']'            shift, and enter state 50
	NATURAL        shift, and enter state 51


State 31

	ISQCore_CStyleVarDefList -> ISQCore_CStyleVarDefList ',' . ISQCore_CStyleVarDefTerm    (rule 107)

	IDENTIFIER     shift, and enter state 49

	ISQCore_CStyleVarDefTermgoto state 48

State 32

	Procedure -> procedure IDENTIFIER '(' . ProcedureArgList ')' '{' StatementList '}'    (rule 117)
	Procedure -> procedure IDENTIFIER '(' . ProcedureArgList ')' '->' Type '{' StatementList '}'    (rule 118)

	int            shift, and enter state 12
	qbit           shift, and enter state 13
	bool           shift, and enter state 15
	unit           shift, and enter state 17
	')'            reduce using rule 112
	IDENTIFIER     shift, and enter state 47

	SimpleType     goto state 42
	ProcedureArgListNonEmptygoto state 43
	ProcedureArgListgoto state 44
	ProcedureArg   goto state 45
	ISQCore_CStyleArrayArggoto state 46

State 33

	ISQCore_GatedefStatement -> defgate IDENTIFIER '=' . ISQCore_GatedefMatrix    (rule 64)

	'['            shift, and enter state 41

	ISQCore_GatedefMatrixgoto state 40

State 34

	IdentListNonEmpty -> IdentListNonEmpty ',' . IDENTIFIER    (rule 47)

	IDENTIFIER     shift, and enter state 39


State 35

	LetStyleDef -> let IdentListNonEmpty ':' . Type     (rule 55)

	int            shift, and enter state 12
	qbit           shift, and enter state 13
	bool           shift, and enter state 15
	unit           shift, and enter state 17

	Type           goto state 36
	SimpleType     goto state 37
	CompositeType  goto state 38

State 36

	LetStyleDef -> let IdentListNonEmpty ':' Type .     (rule 55)
	CompositeType -> Type . ArrayTypeDecorator          (rule 101)

	';'            reduce using rule 55
	'['            shift, and enter state 30

	ArrayTypeDecoratorgoto state 104

State 37

	Type -> SimpleType .                                (rule 95)

	','            reduce using rule 95
	';'            reduce using rule 95
	')'            reduce using rule 95
	'['            reduce using rule 95
	'{'            reduce using rule 95


State 38

	Type -> CompositeType .                             (rule 96)

	','            reduce using rule 96
	';'            reduce using rule 96
	')'            reduce using rule 96
	'['            reduce using rule 96
	'{'            reduce using rule 96


State 39

	IdentListNonEmpty -> IdentListNonEmpty ',' IDENTIFIER .    (rule 47)

	','            reduce using rule 47
	':'            reduce using rule 47


State 40

	ISQCore_GatedefStatement -> defgate IDENTIFIER '=' ISQCore_GatedefMatrix .    (rule 64)

	';'            reduce using rule 64


State 41

	ISQCore_GatedefMatrix -> '[' . ISQCore_GatedefMatrixContent ']'    (rule 59)

	M              shift, and enter state 62
	true           shift, and enter state 63
	false          shift, and enter state 64
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'('            shift, and enter state 67
	'['            shift, and enter state 68
	NATURAL        shift, and enter state 69
	FLOAT          shift, and enter state 70
	IMAGPART       shift, and enter state 71
	IDENTIFIER     shift, and enter state 72

	ExprCallable   goto state 54
	Expr1Left      goto state 55
	Expr1          goto state 101
	CallExpr       goto state 57
	ISQCore_GatedefMatrixContentgoto state 102
	ISQCore_GatedefMatrixRowgoto state 103
	ISQCore_MeasureExprgoto state 61

State 42

	ProcedureArg -> SimpleType . IDENTIFIER             (rule 113)
	ISQCore_CStyleArrayArg -> SimpleType . IDENTIFIER ArrayTypeDecorator    (rule 116)

	IDENTIFIER     shift, and enter state 100


State 43

	ProcedureArgListNonEmpty -> ProcedureArgListNonEmpty . ',' ProcedureArg    (rule 110)
	ProcedureArgList -> ProcedureArgListNonEmpty .      (rule 111)

	','            shift, and enter state 99
	')'            reduce using rule 111


State 44

	Procedure -> procedure IDENTIFIER '(' ProcedureArgList . ')' '{' StatementList '}'    (rule 117)
	Procedure -> procedure IDENTIFIER '(' ProcedureArgList . ')' '->' Type '{' StatementList '}'    (rule 118)

	')'            shift, and enter state 98


State 45

	ProcedureArgListNonEmpty -> ProcedureArg .          (rule 109)

	','            reduce using rule 109
	')'            reduce using rule 109


State 46

	ProcedureArg -> ISQCore_CStyleArrayArg .            (rule 114)

	','            reduce using rule 114
	')'            reduce using rule 114


State 47

	ProcedureArg -> IDENTIFIER . ':' Type               (rule 115)

	':'            shift, and enter state 97


State 48

	ISQCore_CStyleVarDefList -> ISQCore_CStyleVarDefList ',' ISQCore_CStyleVarDefTerm .    (rule 107)

	','            reduce using rule 107
	';'            reduce using rule 107


State 49

	ISQCore_CStyleVarDefTerm -> IDENTIFIER .            (rule 102)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER . ArrayTypeDecorator    (rule 103)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER . '=' Expr    (rule 104)
	ISQCore_CStyleVarDefTerm -> IDENTIFIER . ArrayTypeDecorator '=' Expr    (rule 105)

	'='            shift, and enter state 28
	','            reduce using rule 102
	';'            reduce using rule 102
	'['            shift, and enter state 30

	ArrayTypeDecoratorgoto state 27

State 50

	ArrayTypeDecorator -> '[' ']' .                     (rule 93)

	'='            reduce using rule 93
	','            reduce using rule 93
	';'            reduce using rule 93
	')'            reduce using rule 93
	'['            reduce using rule 93
	'{'            reduce using rule 93


State 51

	ArrayTypeDecorator -> '[' NATURAL . ']'             (rule 94)

	']'            shift, and enter state 96


State 52

	Procedure -> SimpleType IDENTIFIER '(' ProcedureArgList . ')' '{' StatementList '}'    (rule 119)

	')'            shift, and enter state 95


State 53

	ISQCore_CStyleVarDefTerm -> IDENTIFIER '=' Expr .    (rule 104)

	','            reduce using rule 104
	';'            reduce using rule 104


State 54

	Expr1Left -> ExprCallable .                         (rule 10)
	CallExpr -> ExprCallable . '(' Expr1List ')'        (rule 33)

	'=='           reduce using rule 10
	'+'            reduce using rule 10
	'-'            reduce using rule 10
	'*'            reduce using rule 10
	'/'            reduce using rule 10
	'<'            reduce using rule 10
	'>'            reduce using rule 10
	'<='           reduce using rule 10
	'>='           reduce using rule 10
	'!='           reduce using rule 10
	','            reduce using rule 10
	';'            reduce using rule 10
	'('            shift, and enter state 94
	')'            reduce using rule 10
	'['            reduce using rule 10
	']'            reduce using rule 10
	'{'            reduce using rule 10
	':'            reduce using rule 10


State 55

	Expr1Left -> Expr1Left . '[' Expr ']'               (rule 11)
	Expr1 -> Expr1Left .                                (rule 12)

	'=='           reduce using rule 12
	'+'            reduce using rule 12
	'-'            reduce using rule 12
	'*'            reduce using rule 12
	'/'            reduce using rule 12
	'<'            reduce using rule 12
	'>'            reduce using rule 12
	'<='           reduce using rule 12
	'>='           reduce using rule 12
	'!='           reduce using rule 12
	','            reduce using rule 12
	';'            reduce using rule 12
	')'            reduce using rule 12
	'['            shift, and enter state 93
	']'            reduce using rule 12
	'{'            reduce using rule 12
	':'            reduce using rule 12


State 56

	Expr -> Expr1 .                                     (rule 6)
	Expr1 -> Expr1 . '+' Expr1                          (rule 13)
	Expr1 -> Expr1 . '-' Expr1                          (rule 14)
	Expr1 -> Expr1 . '*' Expr1                          (rule 15)
	Expr1 -> Expr1 . '/' Expr1                          (rule 16)
	Expr1 -> Expr1 . '==' Expr1                         (rule 17)
	Expr1 -> Expr1 . '!=' Expr1                         (rule 18)
	Expr1 -> Expr1 . '>' Expr1                          (rule 19)
	Expr1 -> Expr1 . '<' Expr1                          (rule 20)
	Expr1 -> Expr1 . '>=' Expr1                         (rule 21)
	Expr1 -> Expr1 . '<=' Expr1                         (rule 22)
	MaybeExpr1 -> Expr1 .                               (rule 34)

	'=='           shift, and enter state 83
	'+'            shift, and enter state 84
	'-'            shift, and enter state 85
	'*'            shift, and enter state 86
	'/'            shift, and enter state 87
	'<'            shift, and enter state 88
	'>'            shift, and enter state 89
	'<='           shift, and enter state 90
	'>='           shift, and enter state 91
	'!='           shift, and enter state 92
	','            reduce using rule 6
	';'            reduce using rule 6
	')'            reduce using rule 6
	']'            reduce using rule 6
	'{'            reduce using rule 6
	':'            reduce using rule 34


State 57

	Expr1 -> CallExpr .                                 (rule 28)

	'=='           reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'*'            reduce using rule 28
	'/'            reduce using rule 28
	'<'            reduce using rule 28
	'>'            reduce using rule 28
	'<='           reduce using rule 28
	'>='           reduce using rule 28
	'!='           reduce using rule 28
	','            reduce using rule 28
	';'            reduce using rule 28
	')'            reduce using rule 28
	']'            reduce using rule 28
	'{'            reduce using rule 28
	':'            reduce using rule 28


State 58

	RangeExpr -> MaybeExpr1 . ':' MaybeExpr1 ':' MaybeExpr1    (rule 36)
	RangeExpr -> MaybeExpr1 . ':' MaybeExpr1            (rule 37)

	':'            shift, and enter state 82


State 59

	Expr2 -> RangeExpr .                                (rule 38)

	','            reduce using rule 38
	';'            reduce using rule 38
	')'            reduce using rule 38
	']'            reduce using rule 38
	'{'            reduce using rule 38


State 60

	Expr -> Expr2 .                                     (rule 7)

	','            reduce using rule 7
	';'            reduce using rule 7
	')'            reduce using rule 7
	']'            reduce using rule 7
	'{'            reduce using rule 7


State 61

	Expr1 -> ISQCore_MeasureExpr .                      (rule 32)

	'=='           reduce using rule 32
	'+'            reduce using rule 32
	'-'            reduce using rule 32
	'*'            reduce using rule 32
	'/'            reduce using rule 32
	'<'            reduce using rule 32
	'>'            reduce using rule 32
	'<='           reduce using rule 32
	'>='           reduce using rule 32
	'!='           reduce using rule 32
	','            reduce using rule 32
	';'            reduce using rule 32
	')'            reduce using rule 32
	']'            reduce using rule 32
	'{'            reduce using rule 32
	':'            reduce using rule 32


State 62

	ISQCore_MeasureExpr -> M . '<' Expr1Left '>'        (rule 74)
	ISQCore_MeasureExpr -> M . '(' Expr1Left ')'        (rule 75)

	'<'            shift, and enter state 80
	'('            shift, and enter state 81


State 63

	Expr1 -> true .                                     (rule 30)

	'=='           reduce using rule 30
	'+'            reduce using rule 30
	'-'            reduce using rule 30
	'*'            reduce using rule 30
	'/'            reduce using rule 30
	'<'            reduce using rule 30
	'>'            reduce using rule 30
	'<='           reduce using rule 30
	'>='           reduce using rule 30
	'!='           reduce using rule 30
	','            reduce using rule 30
	';'            reduce using rule 30
	')'            reduce using rule 30
	']'            reduce using rule 30
	'{'            reduce using rule 30
	':'            reduce using rule 30


State 64

	Expr1 -> false .                                    (rule 31)
